#############################################################################
# Copyright (c) 2025 Martin Erich Jobst
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#    Martin Erich Jobst
#      - initial API and implementation and/or initial documentation
#############################################################################

add_subdirectory(ads)
add_subdirectory(arrowhead)
add_subdirectory(conmeleon_c1)
add_subdirectory(convert)
add_subdirectory(eliteboard)
add_subdirectory(embrick)
add_subdirectory(gpiochip)
add_subdirectory(i2c_dev)
add_subdirectory(IEC61131-3)
add_subdirectory(lms_ev3)
add_subdirectory(mlpi)
add_subdirectory(odroid)
add_subdirectory(piface)
add_subdirectory(PLC01A1)
add_subdirectory(PLCnext)
add_subdirectory(powerlink)
add_subdirectory(raspberry_sps)
add_subdirectory(reconfiguration)
add_subdirectory(revolutionPi)
add_subdirectory(rt_events)
add_subdirectory(signalprocessing)
add_subdirectory(umic)
add_subdirectory(utils)
add_subdirectory(wagokbus)
add_subdirectory(zephyr)
